--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/products/<%=product.id %>">Details</a>
+                                    <button class="btn"><a href="/products/<%=product.id %>">Details</a></button>
                                     <form action="/add-to-cart" method="POST">
                                         <button class="btn">Add to Cart</button>
                                     </form>
