--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -24,6 +24,11 @@
                 <label for="description">Description</label>
                 <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
             </div>
+            <% if (editing) { %>
+                <!-- because we added this field we can extract the product id in the incoming request in the controller (req.body.productId)  it's same as a name here-->
+                <input type="hidden" value="<%= product.id %>" name="productId"> 
+
+            <% } %>
 
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
         </form>
